# ibcx-contracts

./: .gitignore  .gitmodules  Beaker.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  codecov.yml
.beaker/: state.json
.cargo/: config
.github/workflows/: coverage.yaml  linter.yaml  publish.yaml  test.yaml  tester.yaml
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/src/: airdrop.rs  contract.rs  error.rs  execute.rs  lib.rs  merkle.rs  query.rs  state.rs  verify.rs
contracts/airdrop/src/execute/: claim.rs  close.rs  fund.rs  mod.rs  register.rs  test.rs
contracts/airdrop/src/query/: airdrop.rs  claim.rs  label.rs  mod.rs
contracts/compat/: Cargo.toml
contracts/compat/src/: contract.rs  lib.rs  state.rs
contracts/core/: Cargo.toml  README.md
contracts/core/src/: contract.rs  error.rs  lib.rs  query.rs  state.rs
contracts/core/src/execute/: config.rs  fee.rs  gov.rs  mod.rs  rebalance.rs  token.rs
contracts/core/src/execute/gov/: mod.rs  pause.rs  update.rs
contracts/core/src/execute/rebalance/: finalize.rs  init.rs  mod.rs
contracts/core/src/execute/rebalance/trade/: deflate.rs  inflate.rs  mod.rs
contracts/core/src/state/: assets.rs  config.rs  fee.rs  mod.rs  pause.rs  rebalance.rs  units.rs
contracts/core/src/test/: mock.rs  mod.rs  querier.rs
contracts/cw-pool/: Cargo.toml
contracts/cw-pool/src/: contract.rs  error.rs  lib.rs
contracts/faucet/: Cargo.toml  README.md
contracts/faucet/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/periphery/: Cargo.toml  README.md
contracts/periphery/src/: contract.rs  error.rs  execute.rs  lib.rs  msgs.rs  query.rs  sim.rs  state.rs
contracts/periphery/src/pool/: mod.rs  stable.rs  weighted.rs
contracts/periphery/src/sim/: index_in.rs  index_out.rs  mod.rs  route.rs
contracts/periphery/test/data/: all-pools-after.json  all-pools.json  conv.js
contracts/test-querier/: Cargo.toml
contracts/test-querier/src/: contract.rs  lib.rs
integration-test/: Cargo.toml
integration-test/tests/: approx.rs  proposal.rs  setup.rs  tests.rs
schema/: core.json
scripts/: deploy-local.sh  deploy-test.sh  localnet-start.sh  localnet-stop.sh  pool_config.json
scripts/local/: ibc_core.json
scripts/testnet/: ibc_compat.json  ibc_core.json
src/: main.rs
tests/: Cargo.toml
tests/src/: main.rs
ts/deployer/: .gitignore  config.example.yaml  package.json
ts/deployer/src/: 1_setup.ts  2_lping.ts  3_deploy.ts  3_store.ts  4_deploy.ts  codec.ts  config.ts  portfolio.ts  util.ts
ts/deployer/src/mainnet/: 3_store.ts  4_deploy.ts  6_periphery.ts  6_periphery_osmo.ts  6_periphery_usdc.ts
ts/deployer/src/testnet/: 1_setup.ts  2_lping.ts  3_store.ts  4_deploy.ts  5_mint-burn.ts  6_periphery.ts  7_rebalance.ts  8_query.ts  999_exit-pool.ts  999_migration.ts
ts/sdk/: .gitignore  README.md  package.json  rollup.config.js  tsconfig.json  typedoc.json
ts/sdk/docs/: README.md
ts/sdk/docs/modules/: contracts.contracts-1.md  contracts.md
ts/sdk/scripts/: codegen.js
ts/sdk/src/contracts/: Airdrop.client.ts  Airdrop.message-composer.ts  Airdrop.react-query.ts  Airdrop.types.ts  Compat.client.ts  Compat.types.ts  Core.client.ts  Core.message-composer.ts  Core.react-query.ts  Core.types.ts  Faucet.client.ts  Faucet.message-composer.ts  Faucet.react-query.ts  Faucet.types.ts  Periphery.client.ts  Periphery.message-composer.ts  Periphery.react-query.ts  Periphery.types.ts  index.ts
ts/sdk/types/contracts/: Airdrop.client.d.ts  Airdrop.client.d.ts.map  Airdrop.message-composer.d.ts  Airdrop.message-composer.d.ts.map  Airdrop.react-query.d.ts  Airdrop.react-query.d.ts.map  Airdrop.types.d.ts  Airdrop.types.d.ts.map  Compat.client.d.ts  Compat.client.d.ts.map  Compat.types.d.ts  Compat.types.d.ts.map  Core.client.d.ts  Core.client.d.ts.map  Core.message-composer.d.ts  Core.message-composer.d.ts.map  Core.react-query.d.ts  Core.react-query.d.ts.map  Core.types.d.ts  Core.types.d.ts.map  Faucet.client.d.ts  Faucet.client.d.ts.map  Faucet.message-composer.d.ts  Faucet.message-composer.d.ts.map  Faucet.react-query.d.ts  Faucet.react-query.d.ts.map  Faucet.types.d.ts  Faucet.types.d.ts.map  Periphery.client.d.ts  Periphery.client.d.ts.map  Periphery.message-composer.d.ts  Periphery.message-composer.d.ts.map  Periphery.react-query.d.ts  Periphery.react-query.d.ts.map  Periphery.types.d.ts  Periphery.types.d.ts.map  index.d.ts  index.d.ts.map
ts/tools/: .gitignore  package.json
ts/tools/airdrop/: generate.sh
ts/tools/src/: index.ts  signer.ts
ts/tools/testdata/: input-bearer.json  input-open.json  output-bearer.json  output-open.json
