[workspace]
members = [
    "contracts/*",
    "packages/interface",
    "packages/utils",
    "packages/testutils/*",
    "integration-test",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.package]
version = "0.1.1"
authors = ["frostornge <frostornge@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/many-things/ibcx-contracts"
keywords = ["ion", "dao", "cosmos", "cosmwasm"]

[workspace.dependencies]
# cosmwasm
cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
cosmwasm-storage = "1.4.0"
cosmwasm-schema = "1.4.0"

# cosmwasm extensions
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw-multi-test = "0.16.5"

# cryptography
sha2 = { version = "0.10.7", default-features = false }
ripemd = { version = "0.1.3" }

# encoding
base64 = "0.21.2"
bech32 = "0.9.1"
hex = "0.4.3"
serde_json = { version = "1.0.96" }
serde-json-wasm = "1.0.0"
prost = { version = "0.12.1" }

# math
rust_decimal = { version = "1.29.1", features = ["maths"] }
rust_decimal_macros = "1.29.1"

# osmosis
osmosis-std = { version = "0.19.0" }
osmosis-test-tube = { version = "19.0.0" }

# helpers
semver = { version = "1.0.18" }
anyhow = { version = "1.0.72" }
thiserror = { version = "1.0.37" }

# local dependencies
ibcx-airdrop = { path = "contracts/airdrop" }
ibcx-core = { path = "contracts/core" }
ibcx-periphery = { path = "contracts/periphery" }

ibcx-utils = { path = "packages/utils" }
ibcx-interface = { path = "packages/interface" }
ibcx-test-msg = { path = "packages/testutils/msg" }
