[workspace]
members = ["contracts/*", "packages/*", "integration-test"]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.package]
version = "0.1.1"
authors = ["ByeongSu Hong <hong@byeongsu.dev>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/many-things/ibcx-contracts"
keywords = ["ion", "ibcx", "dao", "cosmos", "cosmwasm", "index"]

[workspace.dependencies]
# cosmwasm
cosmwasm-std = { version = "1.5.2", features = ["stargate"] }
cosmwasm-storage = "1.5.2"
cosmwasm-schema = "1.5.2"

# cosmwasm extensions
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw-multi-test = "0.20.0"

# cryptography
sha2 = { version = "0.10.8", default-features = false }
ripemd = { version = "0.1.3" }

# encoding
base64 = "0.21.7"
bech32 = "0.9.1"
hex = "0.4.3"
serde = { version = "1.0.195" }
serde_json = { version = "1.0.111" }
serde-json-wasm = "1.0.0"
prost = { version = "0.12.3" }

# osmosis
osmosis-std = { version = "0.22.0" }
osmosis-test-tube = { version = "22.0.0" }

# helpers
rstest = { version = "0.18.2" }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
semver = { version = "1.0.21" }
anyhow = { version = "1.0.79" }
thiserror = { version = "1.0.56" }

# families
ibcx-test-utils = { version = "0.1.4" }

# local dependencies
ibcx-airdrop = { path = "contracts/airdrop" }
ibcx-core = { path = "contracts/core" }
ibcx-periphery = { path = "contracts/periphery" }

ibcx-utils = { path = "packages/utils" }
ibcx-math = { path = "packages/math" }
ibcx-pool = { path = "packages/pool" }
ibcx-interface = { path = "packages/interface" }
