[package]
name = "ibcx-tests"
version = "0.0.1"
authors = ["frostornge <hong@byeongsu.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dev_dependencies]
osmosis-test-tube = { git = "https://github.com/osmosis-labs/test-tube.git", branch = "autobuild-v15.0.0" }
serde_json = { version = "1.0.96" }
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
osmosis-std = "0.15.2"
ibcx-core = { path = "../contracts/core" }
ibcx-periphery = { path = "../contracts/periphery" }
ibcx-interface = { path = "../packages/interface" }
