[package]
name = "ibcx-tests"
version = "0.0.1"
authors = ["frostornge <hong@byeongsu.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }

[dev_dependencies]
osmosis-test-tube = { version = "15.1.0" }
serde_json = { version = "1.0.96" }
cosmwasm-schema = "1.2.5"
base64 = "0.21.2"
ibcx-interface = { path = "../packages/interface" }
