[package]
name = "ibcx-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
prost.workspace = true
anyhow.workspace = true
cosmwasm-std.workspace = true

[dev_dependencies]
osmosis-test-tube.workspace = true
serde_json.workspace = true
serde-json-wasm.workspace = true
cosmwasm-schema.workspace = true
base64.workspace = true

ibcx-interface.workspace = true
ibcx-periphery.workspace = true
