[package]
name = "ibc-airdrop"
version = "0.1.0"
authors = ["frostornge <frostornge@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["stargate"]}
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.16"
cw-utils = "0.16"
cw2 = "0.16"
thiserror = { version = "1.0.31" }

osmosis-std = "0.12.0"
ibc-interface = { path = "../../packages/interface" }

[dev-dependencies]
cw-multi-test = "0.16"
