[package]
name = "ibcx-faucet"
version = "0.1.0"
authors = ["frostornge <frostornge@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
cosmwasm-storage = "1.1.9"
cosmwasm-schema = "1.1.9"
cw-storage-plus = "1.0.1"
cw-utils = "0.16.0"
cw2 = "1.0.0"
thiserror = { version = "1.0.37" }

osmosis-std = "0.13.1"
ibcx-utils = { path = "../../packages/utils" }
ibcx-interface = { path = "../../packages/interface" }

[dev-dependencies]
cw-multi-test = "0.16.1"
